--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,11 @@
     <div class="max-w-7xl mx-auto">
         <header class="mb-8">
             <h1 class="text-3xl font-bold text-gray-900">database-1 RDS dashboard</h1>
+        <p class="mt-2 text-blue-600 text-sm">
+    <a href="https://github.com/matthew123987/rds_java_project_public" target="_blank" class="underline hover:text-blue-800">
+      https://github.com/matthew123987/rds_java_project_public
+    </a>
+  </p>
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-5">
