--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
     <div class="max-w-7xl mx-auto">
         <header class="mb-8">
             <h1 class="text-3xl font-bold text-gray-900">database-1 RDS dashboard</h1>
-        <p class="mt-2 text-blue-600 text-2xl">
+        <p class="mt-2 text-blue-600 text-xl">
     <a href="https://github.com/matthew123987/rds_java_project_public" target="_blank" class="underline hover:text-blue-800">
        https://github.com/matthew123987/rds_java_project_public
     </a>
