--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
 
     <div class="max-w-7xl mx-auto">
         <header class="mb-8">    
-        <p class="mt-2 text-blue-600 text-xl">
+        <p class="text-blue-600 text-xl mb-4">
     <a href="https://github.com/matthew123987/rds_java_project_public" target="_blank" class="underline hover:text-blue-800">
        https://github.com/matthew123987/rds_java_project_public
     </a>
